css/views.css
/* $Id: views.css,v 1.9 2008-05-07 23:00:25 merlinofchaos Exp $ */
.views-exposed-form .views-exposed-widget {
  float: left;
  padding: .5em 1em 0 0;
}

.views-exposed-form .views-exposed-widget .form-submit {
  margin-top: 1.6em;
}

.views-exposed-form .form-item,
.views-exposed-form .form-submit {
  margin-top: 0;
  margin-bottom: 0;
}

.views-exposed-form label {
  font-weight: bold;
}

.views-exposed-widgets {
  margin-bottom: .5em;
}

html.js a.views-throbbing,
html.js span.views-throbbing {
  background:url(../images/status-active.gif) no-repeat right center;
  padding-right:18px;
}

/* administrative hover links */

div.view div.views-admin-links {
  font-size: xx-small;
  margin-right: 1em;
  padding-top: 1em;
}

.block div.view div.views-admin-links {
  padding-top: 0;
}

div.view div.views-admin-links ul {
  padding-left: 0;
}

div.view div.views-admin-links li a {
  color: #ccc;
}

div.view div.views-admin-links li {
  padding-bottom: 2px;
  z-index: 201;
}

div.view div.views-admin-links-hover a,
div.view div.views-admin-links:hover a {
  color: #000;
}

div.view div.views-admin-links a:before {
  content: "[";
}

div.view div.views-admin-links a:after {
  content: "]";
}

div.view div.views-hide {
  display: none;
}

/** For IE we add the class via js; for other browsers we rely on :hover **/
div.view div.views-hide-hover,
div.view:hover div.views-hide {
  display: block;
  position: absolute;
  z-index: 200;
}

/* don't do this one in IE */
div.view:hover div.views-hide {
  margin-top: -1.5em;
}

/* Remove the border on tbody that system puts in */
.views-view-grid tbody {
  border-top: none;
}

